# AiFarming

./: .gitignore  README.md  blood_sampling_example.ipynb  pyproject.toml  slaughter_data_example.ipynb
aifarming/: main.py
aifarming/data/: __init__.py  blood_sampling.py  blood_sampling_irregular_format.py
aifarming/database/: __init__.py  db_functions.py  schema.sql
notebooks/: blood_sampling_example.ipynb  slaughter_data_example.ipynb
sample_files/: Blood sampling - data 22 weeks.xls  HB uitslag bult 4.xlsx  Slacht Bult 4 EKRO 06-03-2024 2e.xls  bult 1 slacht pali wk 41 156.5 kg,   .csv
src/: main.py
src/data/: __init__.py  blood_sampling.py  process_data.py  slaughter_data.py
src/database/: db_functions.py  schema.sql
